parser/VerboseParser.py
# Generated from parser/Verbose.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VerboseParser ( Parser ):

    grammarFileName = "Verbose.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "','", "';'", "<INVALID>", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", "'*'", 
                     "'/'", "<INVALID>", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'&'", "'|'", "'^'", "<INVALID>", "'named'", "'from'", 
                     "'with'", "'to'", "'function'", "'arguments'", "'targets'", 
                     "'target'", "'while'", "'if'", "'else'", "'returning'", 
                     "'inline'", "'forced'", "'optional'", "'external'", 
                     "'return'", "'break'", "'continue'", "'procedure'", 
                     "'do'", "'begin'", "'end'", "'variable'", "'constant'", 
                     "'pointer'", "'reference'", "'assigned'", "'assign'", 
                     "'value'", "'index'", "'at'", "'not'", "'and'", "'or'", 
                     "'call'", "'size'", "'location'", "'max'", "'min'", 
                     "'code'", "'of'", "'type'", "'is'", "'in'" ]

    symbolicNames = [ "<INVALID>", "WS", "INLINE_COMMENT", "V_FLOAT", "V_INTEGER", 
                      "V_INTEGER_HEX", "V_INTEGER_OCT", "V_INTEGER_BIN", 
                      "V_STRING", "P_PERIOD", "P_COMMA", "P_SEMIC", "P_ACCESSOR", 
                      "L_PARENTHESIS", "R_PARENTHESIS", "L_BRACKET", "R_BRACKET", 
                      "L_BRACE", "R_BRACE", "O_PLUS", "O_MINUS", "O_TIMES", 
                      "O_DIVIDE", "O_EQUAL", "O_NOT_EQUAL", "O_LESS", "O_GREATER", 
                      "O_LESS_EQUAL", "O_GREATER_EQUAL", "O_BIT_AND", "O_BIT_OR", 
                      "O_BIT_XOR", "O_BIT_NOT", "NAMED", "FROM", "WITH", 
                      "TO", "FUNCTION", "ARGUMENTS", "TARGETS", "TARGET", 
                      "WHILE", "IF", "ELSE", "RETURNING", "INLINE", "FORCED", 
                      "OPTIONAL", "EXTERNAL", "RETURN", "BREAK", "CONTINUE", 
                      "PROCEDURE", "DO", "BEGIN", "END", "VARIABLE", "CONSTANT", 
                      "POINTER", "REFERENCE", "ASSIGNED", "ASSIGN", "VALUE", 
                      "INDEX", "AT", "NOT", "AND", "OR", "CALL", "SIZE", 
                      "LOCATION", "MAX", "MIN", "CODE", "OF", "TYPE", "IS", 
                      "IN", "V_IDENTIFIER" ]

    RULE_module = 0
    RULE_function_access = 1
    RULE_inline_part = 2
    RULE_qualifiers_part = 3
    RULE_expr_call = 4
    RULE_access_expr = 5
    RULE_of_expr = 6
    RULE_expression = 7
    RULE_type_expr = 8
    RULE_mutability_node = 9
    RULE_simple_type_expr = 10
    RULE_pointer_node = 11
    RULE_statement = 12
    RULE_assignment = 13
    RULE_call_argument = 14
    RULE_call_arguments = 15
    RULE_call_target = 16
    RULE_call_statement = 17
    RULE_var_decl = 18
    RULE_break_statement = 19
    RULE_continue_statement = 20
    RULE_return_statement = 21
    RULE_block_item = 22
    RULE_block = 23
    RULE_if = 24
    RULE_while = 25
    RULE_do_while = 26
    RULE_return_type_decl_part = 27
    RULE_name_decl_part = 28
    RULE_function_name_decl_part = 29
    RULE_target_decl_part = 30
    RULE_arguments_decl_part = 31
    RULE_function = 32
    RULE_type_decl = 33
    RULE_module_item = 34
    RULE_section_header = 35
    RULE_section = 36

    ruleNames =  [ "module", "function_access", "inline_part", "qualifiers_part", 
                   "expr_call", "access_expr", "of_expr", "expression", 
                   "type_expr", "mutability_node", "simple_type_expr", "pointer_node", 
                   "statement", "assignment", "call_argument", "call_arguments", 
                   "call_target", "call_statement", "var_decl", "break_statement", 
                   "continue_statement", "return_statement", "block_item", 
                   "block", "if", "while", "do_while", "return_type_decl_part", 
                   "name_decl_part", "function_name_decl_part", "target_decl_part", 
                   "arguments_decl_part", "function", "type_decl", "module_item", 
                   "section_header", "section" ]

    EOF = Token.EOF
    WS=1
    INLINE_COMMENT=2
    V_FLOAT=3
    V_INTEGER=4
    V_INTEGER_HEX=5
    V_INTEGER_OCT=6
    V_INTEGER_BIN=7
    V_STRING=8
    P_PERIOD=9
    P_COMMA=10
    P_SEMIC=11
    P_ACCESSOR=12
    L_PARENTHESIS=13
    R_PARENTHESIS=14
    L_BRACKET=15
    R_BRACKET=16
    L_BRACE=17
    R_BRACE=18
    O_PLUS=19
    O_MINUS=20
    O_TIMES=21
    O_DIVIDE=22
    O_EQUAL=23
    O_NOT_EQUAL=24
    O_LESS=25
    O_GREATER=26
    O_LESS_EQUAL=27
    O_GREATER_EQUAL=28
    O_BIT_AND=29
    O_BIT_OR=30
    O_BIT_XOR=31
    O_BIT_NOT=32
    NAMED=33
    FROM=34
    WITH=35
    TO=36
    FUNCTION=37
    ARGUMENTS=38
    TARGETS=39
    TARGET=40
    WHILE=41
    IF=42
    ELSE=43
    RETURNING=44
    INLINE=45
    FORCED=46
    OPTIONAL=47
    EXTERNAL=48
    RETURN=49
    BREAK=50
    CONTINUE=51
    PROCEDURE=52
    DO=53
    BEGIN=54
    END=55
    VARIABLE=56
    CONSTANT=57
    POINTER=58
    REFERENCE=59
    ASSIGNED=60
    ASSIGN=61
    VALUE=62
    INDEX=63
    AT=64
    NOT=65
    AND=66
    OR=67
    CALL=68
    SIZE=69
    LOCATION=70
    MAX=71
    MIN=72
    CODE=73
    OF=74
    TYPE=75
    IS=76
    IN=77
    V_IDENTIFIER=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VerboseParser.EOF, 0)

        def module_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerboseParser.Module_itemContext)
            else:
                return self.getTypedRuleContext(VerboseParser.Module_itemContext,i)


        def getRuleIndex(self):
            return VerboseParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = VerboseParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 37)) & ~0x3f) == 0 and ((1 << (_la - 37)) & 2473909161229) != 0):
                self.state = 74
                self.module_item()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(VerboseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_accessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def V_IDENTIFIER(self):
            return self.getToken(VerboseParser.V_IDENTIFIER, 0)

        def AND(self):
            return self.getToken(VerboseParser.AND, 0)

        def OR(self):
            return self.getToken(VerboseParser.OR, 0)

        def MAX(self):
            return self.getToken(VerboseParser.MAX, 0)

        def MIN(self):
            return self.getToken(VerboseParser.MIN, 0)

        def getRuleIndex(self):
            return VerboseParser.RULE_function_access

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_access" ):
                listener.enterFunction_access(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_access" ):
                listener.exitFunction_access(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_access" ):
                return visitor.visitFunction_access(self)
            else:
                return visitor.visitChildren(self)




    def function_access(self):

        localctx = VerboseParser.Function_accessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_access)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not(((((_la - 66)) & ~0x3f) == 0 and ((1 << (_la - 66)) & 4195) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inline_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INLINE(self):
            return self.getToken(VerboseParser.INLINE, 0)

        def OPTIONAL(self):
            return self.getToken(VerboseParser.OPTIONAL, 0)

        def getRuleIndex(self):
            return VerboseParser.RULE_inline_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInline_part" ):
                listener.enterInline_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInline_part" ):
                listener.exitInline_part(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInline_part" ):
                return visitor.visitInline_part(self)
            else:
                return visitor.visitChildren(self)




    def inline_part(self):

        localctx = VerboseParser.Inline_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inline_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 84
                self.match(VerboseParser.OPTIONAL)


            self.state = 87
            self.match(VerboseParser.INLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Qualifiers_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inline_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerboseParser.Inline_partContext)
            else:
                return self.getTypedRuleContext(VerboseParser.Inline_partContext,i)


        def EXTERNAL(self, i:int=None):
            if i is None:
                return self.getTokens(VerboseParser.EXTERNAL)
            else:
                return self.getToken(VerboseParser.EXTERNAL, i)

        def getRuleIndex(self):
            return VerboseParser.RULE_qualifiers_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiers_part" ):
                listener.enterQualifiers_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiers_part" ):
                listener.exitQualifiers_part(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiers_part" ):
                return visitor.visitQualifiers_part(self)
            else:
                return visitor.visitChildren(self)




    def qualifiers_part(self):

        localctx = VerboseParser.Qualifiers_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_qualifiers_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 457396837154816) != 0):
                self.state = 91
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [45, 47]:
                    self.state = 89
                    self.inline_part()
                    pass
                elif token in [48]:
                    self.state = 90
                    self.match(VerboseParser.EXTERNAL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.func = None # Function_accessContext
            self.target = None # Call_targetContext
            self.args = None # Call_argumentsContext

        def WITH(self):
            return self.getToken(VerboseParser.WITH, 0)

        def function_access(self):
            return self.getTypedRuleContext(VerboseParser.Function_accessContext,0)


        def call_arguments(self):
            return self.getTypedRuleContext(VerboseParser.Call_argumentsContext,0)


        def CALL(self):
            return self.getToken(VerboseParser.CALL, 0)

        def ARGUMENTS(self):
            return self.getToken(VerboseParser.ARGUMENTS, 0)

        def P_SEMIC(self):
            return self.getToken(VerboseParser.P_SEMIC, 0)

        def call_target(self):
            return self.getTypedRuleContext(VerboseParser.Call_targetContext,0)


        def getRuleIndex(self):
            return VerboseParser.RULE_expr_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_call" ):
                listener.enterExpr_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_call" ):
                listener.exitExpr_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_call" ):
                return visitor.visitExpr_call(self)
            else:
                return visitor.visitChildren(self)




    def expr_call(self):

        localctx = VerboseParser.Expr_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr_call)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==68:
                    self.state = 96
                    self.match(VerboseParser.CALL)


                self.state = 99
                localctx.func = self.function_access()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==64 or _la==78:
                    self.state = 100
                    localctx.target = self.call_target()


                self.state = 103
                self.match(VerboseParser.WITH)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==38:
                    self.state = 104
                    self.match(VerboseParser.ARGUMENTS)


                self.state = 107
                localctx.args = self.call_arguments()
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 108
                    self.match(VerboseParser.P_SEMIC)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==68:
                    self.state = 111
                    self.match(VerboseParser.CALL)


                self.state = 114
                localctx.func = self.function_access()
                self.state = 115
                localctx.target = self.call_target()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(VerboseParser.CALL)
                self.state = 118
                localctx.func = self.function_access()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return VerboseParser.RULE_access_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ArrayAccessContext(Access_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerboseParser.Access_exprContext
            super().__init__(parser)
            self.array = None # Access_exprContext
            self.index = None # ExpressionContext
            self.copyFrom(ctx)

        def AT(self):
            return self.getToken(VerboseParser.AT, 0)
        def access_expr(self):
            return self.getTypedRuleContext(VerboseParser.Access_exprContext,0)

        def expression(self):
            return self.getTypedRuleContext(VerboseParser.ExpressionContext,0)

        def P_SEMIC(self):
            return self.getToken(VerboseParser.P_SEMIC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAccess" ):
                listener.enterArrayAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAccess" ):
                listener.exitArrayAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayAccess" ):
                return visitor.visitArrayAccess(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(Access_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerboseParser.Access_exprContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def V_IDENTIFIER(self):
            return self.getToken(VerboseParser.V_IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class MemberAccessContext(Access_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerboseParser.Access_exprContext
            super().__init__(parser)
            self.source = None # Access_exprContext
            self.member = None # Token
            self.copyFrom(ctx)

        def P_ACCESSOR(self):
            return self.getToken(VerboseParser.P_ACCESSOR, 0)
        def access_expr(self):
            return self.getTypedRuleContext(VerboseParser.Access_exprContext,0)

        def V_IDENTIFIER(self):
            return self.getToken(VerboseParser.V_IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberAccess" ):
                listener.enterMemberAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberAccess" ):
                listener.exitMemberAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberAccess" ):
                return visitor.visitMemberAccess(self)
            else:
                return visitor.visitChildren(self)


    class DereferenceContext(Access_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerboseParser.Access_exprContext
            super().__init__(parser)
            self.expr = None # ExpressionContext
            self.copyFrom(ctx)

        def AT(self):
            return self.getToken(VerboseParser.AT, 0)
        def expression(self):
            return self.getTypedRuleContext(VerboseParser.ExpressionContext,0)

        def P_SEMIC(self):
            return self.getToken(VerboseParser.P_SEMIC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDereference" ):
                listener.enterDereference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDereference" ):
                listener.exitDereference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDereference" ):
                return visitor.visitDereference(self)
            else:
                return visitor.visitChildren(self)



    def access_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = VerboseParser.Access_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_access_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [64]:
                localctx = VerboseParser.DereferenceContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 122
                self.match(VerboseParser.AT)
                self.state = 123
                localctx.expr = self.expression(0)
                self.state = 125
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 124
                    self.match(VerboseParser.P_SEMIC)


                pass
            elif token in [78]:
                localctx = VerboseParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 127
                localctx.name = self.match(VerboseParser.V_IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 139
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = VerboseParser.MemberAccessContext(self, VerboseParser.Access_exprContext(self, _parentctx, _parentState))
                        localctx.source = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_access_expr)
                        self.state = 130
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 131
                        self.match(VerboseParser.P_ACCESSOR)
                        self.state = 132
                        localctx.member = self.match(VerboseParser.V_IDENTIFIER)
                        pass

                    elif la_ == 2:
                        localctx = VerboseParser.ArrayAccessContext(self, VerboseParser.Access_exprContext(self, _parentctx, _parentState))
                        localctx.array = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_access_expr)
                        self.state = 133
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 134
                        self.match(VerboseParser.AT)
                        self.state = 135
                        localctx.index = self.expression(0)
                        self.state = 137
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                        if la_ == 1:
                            self.state = 136
                            self.match(VerboseParser.P_SEMIC)


                        pass

             
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Of_exprContext(ParserRuleContext):
        __slots__ = 'parser'
